# Cpp_for_professionals

./: Hello.cpp
Day_01/: Hello.cpp  Hello.txt
Day_03/: GUI_Application.txt
Day_04/: Compare_array.txt
Day_05/: complie_multiplecpp.txt
Day_10/: Makefile  myThreadReadFile.cpp
Day_19/: mySqlConn.cpp
Day_2/: Qt_Creator.txt
Day_20/: LoadCsvMysqlDB.cpp  Makefile
Day_22/: myTestWithCopy.cpp  myTestWithMove.cpp
Day_23/: ConnectMongodb.cpp  Makefile
Day_24/: Makefile  QueryMongodb.cpp
Day_25/: CppWebPage.cpp  Makefile
Day_26/: CppWebForm.cpp  Makefile  MyWebAppGet.cpp
Day_31/: new_members.json
Day_35/: Makefile  libmyLib.so.1  libmyLib.so.1.0  myObjTest.cpp  mysquare.cpp  mysquare.h  mytriangle.cpp  mytriangle.h
Day_37/: Makefile  templateLinkList.cpp  templateLinkList.h
Day_38/: Makefile  updateMongoDB.cpp
Day_39/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  myReadFile.cpp  myThreadReadFile.cpp
Day_40/: CMakeLists.txt
Day_40/Testing/Temporary/: CTestCostData.txt
Day_41/: Makefile  iteratorContainer.cpp  iteratorContainer.h
Day_44/: Makefile  MultiProcessProgram.cpp
Day_45/: Makefile  main_process.cpp  sub_process.cpp
Day_46/: Makefile  pdf_dump.cpp
Day_47/: Makefile  pdf_count_page.cpp
Day_49/: Makefile  pippo.txt  read_gzip.cpp
Day_50/: Makefile  boostUDPServer.cpp  boostUDPServer.h
Day_51/: Makefile  ex_testing.txt  regularExperssion.cpp
Day_52/: Makefile  my_thread_ex.cpp
Day_53/: Makefile  udp_client.cpp
Day_54/: Makefile  ssh_client.cpp  ssh_client.h
Day_55/: Makefile  ssh_cmd.cpp  ssh_cmd.h
Day_59/: Makefile  pq_connect_ex.cpp
Day_60/: Makefile  (+1 more)
(+170 files in other folders)
